app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  font-family: sans-serif;
}


.datatype-font {
  font-family: "Datatype", monospace;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
  font-variation-settings:
    "wdth" 100;
}

.img-circle {
  clip-path: circle(closest-side at 50% 50%);
  width: 100px;
}

.img-about {
  width: 25%;
}

.resume-div {
  height: 100%
}

/* 00bc7d - hex code for emerald-500 */

